--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
             </div>
             <div class="announcement-content">
                 <strong>
-                    ขณะนี้ระบบอยู่ระหว่างการทดสอบ 
+                    ระบบอยู่ระหว่างการทดสอบ 
                     <span class="beta-badge">Under Testing</span>
                 </strong>
-                <span>เจ้าหน้าที่กำลังปรับปรุงระบบประมวลผล GPA เพื่อความเสถียรสูงสุด ข้อมูลอาจมีการเปลี่ยนแปลงชั่วคราว</span>
+                <span>ยกเลิกการใช้ระบบเก่า 24 ม.ค. 69 ตั้งแต่ 24.00 น. ขอให้คุณครูวางแผนการทำงานของท่านในช่วงระหว่างทดสอบรบบบใหม่</span>
             </div>
         </div>
 
