--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="announcement-content">
                 <strong>
                     ระบบอยู่ระหว่างการทดสอบ 
-                    <span class="beta-badge">Under Testing</span>
+                    <span class="beta-badge"></span>
                 </strong>
                 <span>ยกเลิกการใช้ระบบเก่า 24 ม.ค. 69 ตั้งแต่ 24.00 น. ขอให้คุณครูวางแผนการทำงานของท่านในช่วงระหว่างทดสอบรบบบใหม่</span>
             </div>
