--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <p class="nav-label">เมนูครู</p>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-calendar-check"></i> กำหนดการศึกษา</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-book"></i> ตรวจสอบการเปิดวิชาเรียน</a></li>
+                <li class="nav-item"><a href="check-subject.html" class="nav-link"><i class="fas fa-book"></i> ตรวจสอบการเปิดวิชาเรียน</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-check-double"></i> ยืนยันการส่งเกรด</a></li>
                 <li class="nav-item"><a href="reset.html" class="nav-link"><i class="fas fa-user-shield"></i> Reset User</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-file-download"></i> ดาวน์โหลดเอกสาร</a></li>
