--- a/index.html
+++ b/index.html
@@ -244,9 +244,8 @@
                 <i class="fas fa-vial"></i>
             </div>
             <div class="announcement-content">
-                <strong>
-                    ระบบอยู่ระหว่างการทดสอบ 
-                    <span class="beta-badge"></span>
+                <strong> 
+                    <span class="beta-badge">ระบบอยู่ระหว่างการทดสอบ</span>
                 </strong>
                 <span>ยกเลิกการใช้ระบบเก่า 24 ม.ค. 69 ตั้งแต่ 24.00 น. ขอให้คุณครูวางแผนการทำงานของท่านในช่วงระหว่างทดสอบรบบบใหม่</span>
             </div>
@@ -255,20 +254,21 @@
         <section class="system-selection">
             <a href="teacher-login.html" class="system-mini-card">
                 <div class="sys-icon-small" style="background-color: var(--primary);"><i class="fas fa-chalkboard-teacher"></i></div>
-                <span style="font-weight: 700;">ระบบสำหรับครู</span>
+                <span style="font-weight: 700;">ระบบ SGS สำหรับครู</span>
             </a>
             <a href="student-login.html" class="system-mini-card">
                 <div class="sys-icon-small" style="background-color: #00a8ff;"><i class="fas fa-user-graduate"></i></div>
-                <span style="font-weight: 700;">ระบบสำหรับนักเรียน</span>
+                <span style="font-weight: 700;">ระบบ SGS สำหรับนักเรียน</span>
             </a>
         </section>
 
         <section class="card-countdown">
             <div class="wavy-lines-bg"></div>
             <div style="position: relative; z-index: 2;">
-                <h2 style="font-weight: 600;">กำหนดการส่งเกรด 2568/2</h2>
+                <h2 style="font-weight: 600;">ประชาสัมพันธ์ ภาคเรียนที่ 2 ปีการศึกษา 2568</h2>
+                <h2 style="font-weight: 600;">กำหนดการส่งเกรด (ก่อนกลางภาค/สอบกลางภาค)</h2>
                 <div style="margin-top: 15px; display: inline-block; background-color: #ffffff; padding: 5px 15px; border-radius: 8px;">
-                    <span style="color: #ff0000; font-weight: 700;">ไม่เกินเที่ยงคืน วันศุกร์ที่ 13 กุมภาพันธ์ พ.ศ. 2569</span>
+                    <span style="color: #ff0000; font-weight: 700;">ไม่เกินเที่ยงคืนวันศุกร์ที่ 13 กุมภาพันธ์ พ.ศ. 2569</span>
                 </div>
                 <div id="timer" class="timer-grid">
                     <div class="timer-box"><span id="days" class="t-num">00</span><span>วัน</span></div>
