--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-graduation-cap"></i> ตรวจสอบผลการเรียน</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-user-slash"></i> รายชื่อหมดสิทธิ์สอบ</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-clock"></i> กำหนดการศึกษา</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-user-graduate"></i> ตรวจสอบรายชื่อจบ</a></li>
+                <li class="nav-item"><a href="conget.html" class="nav-link"><i class="fas fa-user-graduate"></i> ตรวจสอบรายชื่อจบ</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-user-edit"></i> ขอแก้ไขข้อมูลส่วนตัว</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-certificate"></i> ขอหลักฐานการศึกษา</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-file-pdf"></i> ดาวน์โหลดเอกสาร</a></li>
