--- a/conget.html
+++ b/conget.html
@@ -60,7 +60,7 @@
 
     <script>
         // *** ใส่ URL ของ Google Sheet CSV ที่คุณคัดลอกมาที่นี่ ***
-        const SHEETS_URL = 'ใส่_URL_CSV_ที่นี่';
+        const SHEETS_URL = 'https://docs.google.com/spreadsheets/d/1pgvSPEfTlUAvCgeXRYKKXUH13aKK14CUpreZu8cfKd8/edit?usp=sharing';
 
         let studentsData = [];
 
