--- a/conget.html
+++ b/conget.html
@@ -60,7 +60,7 @@
 
     <script>
         // *** ใส่ URL ของ Google Sheet CSV ที่คุณคัดลอกมาที่นี่ ***
-        const SHEETS_URL = 'https://docs.google.com/spreadsheets/d/1pgvSPEfTlUAvCgeXRYKKXUH13aKK14CUpreZu8cfKd8/edit?usp=sharing';
+        const SHEETS_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vS-pgaWBxt9HwAXvHCddIpVX0C-Ae2RvlP0TfiY8QnWrZJ7sR5G_ucK8OYtzUccMNRFsLAxjMv0zFzA/pub?output=csv';
 
         let studentsData = [];
 
