--- a/conget.html
+++ b/conget.html
@@ -20,7 +20,7 @@
         <div class="text-center mb-8">
             <img src="ใส่_URL_รูปภาพตราโรงเรียนที่นี่" alt="ตราโรงเรียน" 
                  class="h-24 mx-auto mb-4 drop-shadow-sm" 
-                 onerror="this.src='https://cdn-icons-png.flaticon.com/512/2859/2859367.png'"> 
+                 onerror="https://lh3.googleusercontent.com/sitesv/APaQ0SR8LzlggfBvW9jYQiGlhwbASlh6we5Gco_ZIfT48zZrycF9OnE1TFAxgutwP2wSGj8vAl5vULBW9nIdT3zcf-9P44YoOk8mk7H9aOuEXKnKFWAtOOdSoeVPNxRqGejRQDbFkNWb7fMU9tFnFmO1EqYdF9rJdrr9OOkpjsubigWn7zFH4JeoK0KmEJo=w1280'"> 
             
             <h1 class="header-font text-2xl font-bold text-slate-800 uppercase tracking-wide">ระบบตรวจสอบสถานะการสำเร็จการศึกษา</h1>
             <p class="text-slate-600 font-medium">ระดับชั้นมัธยมศึกษาปีที่ 3 และ 6 ปีการศึกษา 2568</p>
@@ -93,7 +93,7 @@
 
     <script>
         // *** ใส่ URL ของ Google Sheet CSV ที่ได้จากการ Publish to Web ***
-        const SHEETS_URL = 'ใส่_URL_CSV_ที่นี่';
+        const SHEETS_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vS-pgaWBxt9HwAXvHCddIpVX0C-Ae2RvlP0TfiY8QnWrZJ7sR5G_ucK8OYtzUccMNRFsLAxjMv0zFzA/pub?output=csv';
 
         let studentsData = [];
 
