--- a/conget.html
+++ b/conget.html
@@ -20,7 +20,7 @@
         <div class="text-center mb-8">
             <img src="ใส่_URL_รูปภาพตราโรงเรียนที่นี่" alt="ตราโรงเรียน" 
                  class="h-24 mx-auto mb-4 drop-shadow-sm" 
-                 onerror="https://lh3.googleusercontent.com/sitesv/APaQ0SR8LzlggfBvW9jYQiGlhwbASlh6we5Gco_ZIfT48zZrycF9OnE1TFAxgutwP2wSGj8vAl5vULBW9nIdT3zcf-9P44YoOk8mk7H9aOuEXKnKFWAtOOdSoeVPNxRqGejRQDbFkNWb7fMU9tFnFmO1EqYdF9rJdrr9OOkpjsubigWn7zFH4JeoK0KmEJo=w1280'"> 
+                 onerror="unnamed.png'"> 
             
             <h1 class="header-font text-2xl font-bold text-slate-800 uppercase tracking-wide">ระบบตรวจสอบสถานะการสำเร็จการศึกษา</h1>
             <p class="text-slate-600 font-medium">ระดับชั้นมัธยมศึกษาปีที่ 3 และ 6 ปีการศึกษา 2568</p>
