--- a/conget.html
+++ b/conget.html
@@ -18,9 +18,9 @@
 
     <div class="max-w-3xl mx-auto">
         <div class="text-center mb-8">
-            <img src="ใส่_URL_รูปภาพตราโรงเรียนที่นี่" alt="ตราโรงเรียน" 
+            <img src="unnamed.png" alt="ตราโรงเรียน" 
                  class="h-24 mx-auto mb-4 drop-shadow-sm" 
-                 onerror="unnamed.png'"> 
+                 onerror="'"> 
             
             <h1 class="header-font text-2xl font-bold text-slate-800 uppercase tracking-wide">ระบบตรวจสอบสถานะการสำเร็จการศึกษา</h1>
             <p class="text-slate-600 font-medium">ระดับชั้นมัธยมศึกษาปีที่ 3 และ 6 ปีการศึกษา 2568</p>
