--- a/conget.html
+++ b/conget.html
@@ -62,6 +62,10 @@
                                 <td id="resRoom" class="py-4 text-slate-800 font-semibold">-</td>
                             </tr>
                             <tr class="border-b border-slate-100">
+                                <td class="py-4 font-bold text-slate-500">รอบที่จบ</td>
+                                <td id="resRoom" class="py-4 text-slate-800 font-semibold">-</td>
+                            </tr>
+                            <tr class="border-b border-slate-100">
                                 <td class="py-4 font-bold text-slate-500">สถานะการจบการศึกษา</td>
                                 <td class="py-4">
                                     <span id="resStatus" class="font-bold px-3 py-1 rounded text-sm uppercase tracking-wide">
