--- a/conget.html
+++ b/conget.html
@@ -82,7 +82,7 @@
 
                     <div class="mt-10 flex justify-end">
                         <div class="text-center opacity-40">
-                            <p class="text-xs">ออกโดยระบบบริหารจัดการสถานศึกษาอัตโนมัติ</p>
+                            <p class="text-xs">ข้อมูลจากงานทะเบียนวัดผลปีการศึกษา 2568</p>
                             <p class="text-[10px]">ตรวจสอบเมื่อ: <span id="checkTime"></span></p>
                         </div>
                     </div>
